--- a/ansible/playbooks/host/playbook.yaml
+++ b/ansible/playbooks/host/playbook.yaml
@@ -52,12 +52,23 @@
         pkg:
           - ansible
           - git
+          - smartmontools
           - tmux
 
-    - name: Install UGREEN NASync DXP4800 Plus LEDs driver
-      # https://github.com/miskcoo/ugreen_leds_controller
+    # https://github.com/miskcoo/ugreen_leds_controller
+    - name: Install UGREEN LEDs driver
       ansible.builtin.apt:
         deb: https://github.com/miskcoo/ugreen_leds_controller/releases/download/v0.3/led-ugreen-dkms_0.3_amd64.deb
+
+    - name: Create UGREEN LED modules configuration
+      ansible.builtin.copy:
+        dest: /etc/modules-load.d/ugreen-led.conf
+        content: |
+          i2c-dev
+          led-ugreen
+          ledtrig-oneshot
+          ledtrig-netdev
+        mode: "0644"
 
     ## Network configuration
     - name: Configure /etc/hosts
