Try out IPVLAN configuration for Samba

--- a/samba/.env
+++ b/samba/.env
@@ -1,3 +1,13 @@
 ## Versions to use
 # The version to use for Samba
 SAMBA_VERSION=4.21.4
+
+## Network configuration
+# The network interface to use for the IPVLAN network
+IPVLAN_NETWORK_INTERFACE=lan0
+
+# The IP address range for the IPVLAN network
+IPVLAN_NETWORK_SUBNET=192.168.1.0/24
+
+# The gateway for the IPVLAN network
+IPVLAN_NETWORK_GATEWAY=192.168.1.1
