--- a/samba/compose.yaml
+++ b/samba/compose.yaml
@@ -1,17 +1,5 @@
 name: Samba
 
-networks:
-  samba_network:
-    name: samba_network
-    driver: ipvlan
-    driver_opts:
-      parent: ${IPVLAN_NETWORK_INTERFACE}
-    ipam:
-      driver: default
-      config:
-        - subnet: ${IPVLAN_NETWORK_SUBNET}
-          gateway: ${IPVLAN_NETWORK_GATEWAY}
-
 volumes:
   samba_data:
     name: samba_data
@@ -29,14 +17,7 @@ services:
       - samba.env
     environment:
       - CONFIG_FILE=/config.yaml
-    networks:
-      - samba_network
-    ports:
-      - 445:445
-      - 3702:3702
-      - 3702:3702/udp
-      - 5355:5355
-      - 5355:5355/udp
+    network_mode: host
     cap_add:
       - CAP_NET_ADMIN
       - CAP_NET_RAW
