--- a/samba/configs/common.yaml
+++ b/samba/configs/common.yaml
@@ -9,9 +9,21 @@ global:
   - "access based share enum = yes"
 
 share:
-  - name: common
-    comment: Common
-    path: /shares/common
+  - name: media
+    comment: Media
+    path: /shares/media
+    writelist: ${USER}
+    browsable: yes
+    readonly: yes
+    guest ok: yes
+    veto: no
+    # Uncomment this line to enable recycle bin
+    # recycle: yes
+
+  - name: software
+    comment: Software
+    path: /shares/software
+    writelist: ${USER}
     browsable: yes
     readonly: yes
     guest ok: yes
