--- a/wg-easy/compose.yaml
+++ b/wg-easy/compose.yaml
@@ -27,9 +27,9 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
-      - net.ipv6.conf.all.disable_ipv6=0
-      - net.ipv6.conf.all.forwarding=1
-      - net.ipv6.conf.default.forwarding=1
+      # - net.ipv6.conf.all.disable_ipv6=0
+      # - net.ipv6.conf.all.forwarding=1
+      # - net.ipv6.conf.default.forwarding=1
     volumes:
       - wg_easy_config:/etc/wireguard
       - /lib/modules:/lib/modules:ro
