--- a/wg-easy/compose.yaml
+++ b/wg-easy/compose.yaml
@@ -15,7 +15,6 @@ services:
     restart: unless-stopped
     environment:
       - INSECURE=true
-      - DISABLE_IPV6=true
     networks:
       - wg_easy_network
     ports:
@@ -27,9 +26,9 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
-      # - net.ipv6.conf.all.disable_ipv6=0
-      # - net.ipv6.conf.all.forwarding=1
-      # - net.ipv6.conf.default.forwarding=1
+      - net.ipv6.conf.all.disable_ipv6=0
+      - net.ipv6.conf.all.forwarding=1
+      - net.ipv6.conf.default.forwarding=1
     volumes:
       - wg_easy_config:/etc/wireguard
       - /lib/modules:/lib/modules:ro
