--- a/samba/configs/common.yaml
+++ b/samba/configs/common.yaml
@@ -9,9 +9,9 @@ global:
   - "access based share enum = yes"
 
 share:
-  - name: media
-    comment: Media
-    path: /shares/media
+  - name: public
+    comment: Public
+    path: /shares/public
     writelist: ${USER}
     browsable: yes
     readonly: yes
@@ -20,13 +20,13 @@ share:
     # Uncomment this line to enable recycle bin
     # recycle: yes
 
-  - name: software
-    comment: Software
-    path: /shares/software
+  - name: private
+    comment: Private
+    path: /shares/private
     writelist: ${USER}
     browsable: yes
-    readonly: yes
-    guest ok: yes
+    readonly: no
+    guest ok: no
     veto: no
     # Uncomment this line to enable recycle bin
     # recycle: yes
