--- a/qbittorrent/.env
+++ b/qbittorrent/.env
@@ -3,5 +3,5 @@
 QBITTORRENT_FQDN=qbittorrent.m3w.ch
 
 ## Versions to use
-# The version to use for Traefik
+# The version to use for qBittorrent
 QBITTORRENT_VERSION=5.1.0-1
