Make usage of Docker bind mounts

--- a/adguard-home/compose.yaml
+++ b/adguard-home/compose.yaml
@@ -12,12 +12,6 @@ networks:
         - subnet: ${MACVLAN_NETWORK_SUBNET}
           gateway: ${MACVLAN_NETWORK_GATEWAY}
 
-volumes:
-  adguard_home_config:
-    name: adguard_home_config
-  adguard_home_data:
-    name: adguard_home_data
-
 services:
   adguard-home:
     container_name: adguard-home
@@ -28,5 +22,5 @@ services:
       adguard_home_network:
         ipv4_address: ${MACVLAN_NETWORK_IP}
     volumes:
-      - adguard_home_config:/opt/adguardhome/conf
-      - adguard_home_data:/opt/adguardhome/work/data
+      - ./config:/opt/adguardhome/conf
+      - ./data:/opt/adguardhome/work/data
