--- a/navidrome/compose.override.prod.yaml
+++ b/navidrome/compose.override.prod.yaml
@@ -5,7 +5,7 @@ networks:
 services:
   navidrome:
     environment:
-      - ND_BASEURL=${NAVIDROME_FQDN}
+      - ND_BASEURL=https://${NAVIDROME_FQDN}
     networks:
       - traefik_network
     expose:
