--- a/navidrome/compose.yaml
+++ b/navidrome/compose.yaml
@@ -5,9 +5,11 @@ services:
     restart: unless-stopped
     env_file:
       - navidrome.env
+    environment:
+      - ND_MUSICFOLDER=/audio
     user: 1000:1000
     ports:
       - 4533:4533
     volumes:
       - ./config:/data
-      - ./music:/music:ro
+      - ./audio:/audio:ro
