--- a/navidrome/compose.yaml
+++ b/navidrome/compose.yaml
@@ -5,9 +5,12 @@ services:
     restart: unless-stopped
     env_file:
       - navidrome.env
+    environment:
+      - ND_MUSICFOLDER=/data
+      - ND_DATAFOLDER=/config
     user: 1000:1000
     ports:
       - 4533:4533
     volumes:
-      - ./config:/data
-      - ./audio:/audio:ro
+      - ./config:/config
+      - ./data:/data:ro
