--- a/navidrome/compose.yaml
+++ b/navidrome/compose.yaml
@@ -6,11 +6,11 @@ services:
     env_file:
       - navidrome.env
     environment:
-      - ND_MUSICFOLDER=/data
+      - ND_MUSICFOLDER=/media
       - ND_DATAFOLDER=/config
     user: 1000:1000
     ports:
       - 4533:4533
     volumes:
       - ./config:/config
-      - ./data:/data:ro
+      - ./media:/media:ro
