Fix Navidrome version

--- a/navidrome/.env
+++ b/navidrome/.env
@@ -4,4 +4,4 @@ NAVIDROME_FQDN=navidrome.m3w.ch
 
 ## Versions to use
 # The version to use for Navidrome
-NAVIDROME_VERSION=latest
+NAVIDROME_VERSION=0.58.0
