--- a/ansible/playbooks/lxcs/playbook.yaml
+++ b/ansible/playbooks/lxcs/playbook.yaml
@@ -57,6 +57,12 @@
           - containerd.io
           - docker-compose-plugin
 
+    - name: Enable journald logging driver
+      ansible.builtin.template:
+        src: etc/docker/daemon.json.j2
+        dest: /etc/docker/daemon.json
+        mode: "0644"
+
     - name: Enable and start Docker service
       ansible.builtin.service:
         name: docker
