--- a/ansible/ludelafo.m3w.ch/variables.yaml
+++ b/ansible/ludelafo.m3w.ch/variables.yaml
@@ -7,7 +7,7 @@ hostname: ludelafo
 domain: m3w.ch
 
 interface_name: lan0
-mac_address: "bc:24:11:45:83:93"
-ip_address: 192.168.1.3
-netmask: 255.255.255.0
-gateway: 192.168.1.1
+interface_mac_address: "bc:24:11:45:83:93"
+interface_ip_address: 192.168.1.3
+interface_netmask: 255.255.255.0
+interface_gateway: 192.168.1.1
