--- a/ansible/ludelafo.m3w.ch/playbook.yaml
+++ b/ansible/ludelafo.m3w.ch/playbook.yaml
@@ -18,6 +18,44 @@
           - neovim
           - tmux
 
+    ## Docker
+    - name: Download Docker GPG key
+      ansible.builtin.get_url:
+        url: https://download.docker.com/linux/debian/gpg
+        dest: /etc/apt/trusted.gpg.d/docker.asc
+        mode: "0644"
+        checksum: sha256:1500c1f56fa9e26b9b8f42452a553675796ade0807cdce11975eb98170b3a570
+        # The checksum can be calculated with `curl -sL https://download.docker.com/linux/debian/gpg | sha256sum`
+
+    - name: Add Docker APT repository
+      ansible.builtin.apt_repository:
+        repo: >-
+          deb [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/docker.asc]
+          https://download.docker.com/{{ ansible_system | lower }}/{{
+          ansible_distribution | lower }} {{ ansible_distribution_release }}
+          stable
+        filename: docker-repository
+
+    - name: Install Docker with its Compose plugin
+      ansible.builtin.apt:
+        pkg:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+          - docker-compose-plugin
+
+    - name: Enable journald logging driver
+      ansible.builtin.template:
+        src: etc/docker/daemon.json.j2
+        dest: /etc/docker/daemon.json
+        mode: "0644"
+
+    - name: Enable and start Docker service
+      ansible.builtin.service:
+        name: docker
+        state: started
+        enabled: true
+
     ## Network configuration
     - name: Configure /etc/hosts
       ansible.builtin.template:
