--- a/traefik/traefik_static.yaml
+++ b/traefik/traefik_static.yaml
@@ -47,3 +47,5 @@ certificatesResolvers:
         # Please visit the docs:
         # https://doc.traefik.io/traefik/https/acme/#providers
         provider: infomaniak # CHANGE_ME
+        propagation:
+          delayBeforeChecks: 30s
