--- a/ansible/proxmox.m3w.ch/playbook.yaml
+++ b/ansible/proxmox.m3w.ch/playbook.yaml
@@ -183,8 +183,7 @@
         path: /etc/udev/rules.d/69-disks.rules
         line:
           'ACTION=="add|change", SUBSYSTEM=="block", KERNEL=="sd[a-z]",
-          ENV{ID_WWN}=="{{ ansible_devices[disk]["wwn"] }}",
-          ATTRS{queue/rotational}=="1", RUN+="hdparm -B 128 -S 244
+          ATTR{queue/rotational}=="1", RUN+="/usr/sbin/hdparm -B 128 -S 244
           $env{DEVNAME}"'
         create: true
         mode: "0644"
