--- a/adguard-home/.env
+++ b/adguard-home/.env
@@ -6,6 +6,10 @@ ADGUARD_HOME_FQDN=adguard.m3w.ch
 # The version to use for AdGuard Home
 ADGUARD_HOME_VERSION=v0.107.63
 
+## Container and Traefik names
+# The name to use for AdGuard Home
+ADGUARD_HOME_CONTAINER_NAME=adguard-home
+
 ## Network configuration
 # The network interface to use for the MACVLAN network
 MACVLAN_NETWORK_INTERFACE=eth0
