--- a/navidrome/.env
+++ b/navidrome/.env
@@ -5,3 +5,7 @@ NAVIDROME_FQDN=navidrome.m3w.ch
 ## Versions to use
 # The version to use for Navidrome
 NAVIDROME_VERSION=0.58.0
+
+## Container and Traefik names
+# The name to use for Navidrome
+NAVIDROME_CONTAINER_NAME=navidrome
