--- a/qbittorrent/.env
+++ b/qbittorrent/.env
@@ -5,3 +5,8 @@ QBITTORRENT_FQDN=qbittorrent.m3w.ch
 ## Versions to use
 # The version to use for qBittorrent
 QBITTORRENT_VERSION=5.1.0-1
+
+## Container and Traefik names
+# The name to use for qBittorrent
+QBITTORRENT_CONTAINER_NAME=qbittorrent
+
