--- a/qbittorrent/compose.yaml
+++ b/qbittorrent/compose.yaml
@@ -6,7 +6,7 @@ networks:
 
 services:
   qbittorrent:
-    container_name: qbittorrent
+    container_name: ${QBITTORRENT_CONTAINER_NAME}
     image: qbittorrentofficial/qbittorrent-nox:${QBITTORRENT_VERSION}
     restart: unless-stopped
     networks:
