--- a/syncthing/.env
+++ b/syncthing/.env
@@ -5,3 +5,7 @@ SYNCTHING_FQDN=syncthing.m3w.ch
 ## Versions to use
 # The version to use for Syncthing
 SYNCTHING_VERSION=2
+
+## Container and Traefik names
+# The name to use for Syncthing
+SYNCTHING_CONTAINER_NAME=syncthing
