--- a/wg-easy/.env
+++ b/wg-easy/.env
@@ -5,3 +5,7 @@ WG_EASY_FQDN=wg.m3w.ch
 ## Versions to use
 # The version to use for WireGuard Easy
 WG_EASY_VERSION=15.1
+
+## Container and Traefik names
+# The name to use for WireGuard Easy
+WG_EASY_CONTAINER_NAME=wg-easy
