--- a/samba/.env
+++ b/samba/.env
@@ -1,3 +1,11 @@
+## Fully qualified domain names (FQDNs)
+# The FQDN to access Samba
+SAMBA_FQDN=samba.m3w.ch
+
 ## Versions to use
 # The version to use for Samba
 SAMBA_VERSION=4.21.4
+
+## Container name
+# The name to use for Samba
+SAMBA_CONTAINER_NAME=samba
