--- a/traefik/.env
+++ b/traefik/.env
@@ -5,3 +5,7 @@ TRAEFIK_FQDN=traefik.m3w.ch
 ## Versions to use
 # The version to use for Traefik
 TRAEFIK_VERSION=v3.5.0
+
+## Container and Traefik names
+# The name to use for Traefik
+TRAEFIK_CONTAINER_NAME=traefik
