--- a/wg-easy/compose.override.prod.yaml
+++ b/wg-easy/compose.override.prod.yaml
@@ -16,7 +16,13 @@ services:
       ## Traefik
       - traefik.enable=true
       # Router
-      - traefik.http.routers.wg-easy.entrypoints=websecure
-      - traefik.http.routers.wg-easy.rule=Host(`${WG_EASY_FQDN}`)
+      - traefik.http.routers.${WG_EASY_CONTAINER_NAME}.entrypoints=websecure
+      - traefik.http.routers.${WG_EASY_CONTAINER_NAME}.rule=Host(`${WG_EASY_FQDN}`)
       # Service
-      - traefik.http.services.wg-easy.loadbalancer.server.port=51821
+      - traefik.http.services.${WG_EASY_CONTAINER_NAME}.loadbalancer.server.port=51821
+      ## Glance
+      - glance.name=WireGuard Easy
+      - glance.icon=sh:wireguard
+      - glance.url=https://${WG_EASY_FQDN}
+      - glance.description=WG-Easy is a simple WireGuard VPN web interface to manage your WireGuard server and clients.
+      - glance.tags=network
