--- a/wg-easy/compose.yaml
+++ b/wg-easy/compose.yaml
@@ -6,7 +6,7 @@ networks:
 
 services:
   wg-easy:
-    container_name: wg-easy
+    container_name: ${WG_EASY_CONTAINER_NAME}
     image: ghcr.io/wg-easy/wg-easy:${WG_EASY_VERSION}
     restart: unless-stopped
     environment:
