--- a/adguard-home/compose.override.prod.yaml
+++ b/adguard-home/compose.override.prod.yaml
@@ -18,7 +18,7 @@ services:
       - traefik.http.services.${ADGUARD_HOME_CONTAINER_NAME}.loadbalancer.server.port=80
       ## Glance
       - glance.name=AdGuard Home
-      - glance.icon=si:adguard
+      - glance.icon=st:adguard
       - glance.url=https://${ADGUARD_HOME_FQDN}
       - glance.description=AdGuard Home is a network-wide software for blocking ads & tracking.
       - glance.tags=network
