--- a/adguard-home/compose.override.prod.yaml
+++ b/adguard-home/compose.override.prod.yaml
@@ -19,7 +19,7 @@ services:
       ## Glance
       - glance.hide=false
       - glance.name=AdGuard Home
-      - glance.icon=st:adguard-home
+      - glance.icon=sh:adguard-home
       - glance.url=https://${ADGUARD_HOME_FQDN}
       - glance.description=AdGuard Home is a network-wide software for blocking ads & tracking.
       - glance.tags=network
