--- a/wg-easy/compose.override.prod.yaml
+++ b/wg-easy/compose.override.prod.yaml
@@ -26,4 +26,4 @@ services:
       - glance.icon=sh:wireguard
       - glance.url=https://${WG_EASY_FQDN}
       - glance.description=WG-Easy is a simple WireGuard VPN web interface to manage your WireGuard server and clients.
-      - glance.tags=network
+      - glance.category=network
