--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -43,4 +43,4 @@ services:
       - glance.icon=sh:traefik
       - glance.url=https://${TRAEFIK_FQDN}
       - glance.description=Traefik is a modern reverse proxy and load balancer that makes deploying microservices easy.
-      - glance.tags=network
+      - glance.category=network
